--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,17 @@ html {
   */
 }
 
+::-webkit-scrollbar {
+  width: 1rem;
+}
+::-webkit-scrollbar-track {
+  background: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background: red;
+}
+
 body {
   background: black;
 }
@@ -61,7 +72,7 @@ body {
   font-size: 3rem;
 }
 
-span {
+.logo span {
   /* color: red; */
   color: green;
 }
@@ -70,4 +81,22 @@ span {
   display: inline-block;
   padding: 1.5rem 2rem;
   font-size: 1.7rem;
+  color: white;
+}
+
+.navbar a:hover {
+  background: red;
+}
+
+#menu-btn {
+  font-size: 3rem;
+  color: white;
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
 }
