--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,7 @@ body {
     left: 0;
     right: 0;
     background: darkgray;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   }
 
   .navbar a {
