--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,10 @@ body {
 }
 
 @media (max-width: 768px) {
+  #menu-btn {
+    display: inline-block;
+  }
+
   .header {
     padding: 2rem;
   }
