--- a/css/main.css
+++ b/css/main.css
@@ -140,14 +140,15 @@ section {
   margin-top: 6.5rem;
 }
 
-/*
 .home .slide {
   min-height: 70vh;
-*/
-
+  background-size: cover;
+}
+/*
 .slide {
   min-height: 70vh;
 }
+*/
 
 @media (max-width: 991px) {
   html {
