--- a/css/main.css
+++ b/css/main.css
@@ -145,12 +145,18 @@ section {
   background-size: cover;
   background-position: cover;
   padding: 2rem 9%;
+  display: flex;
+  align-items: center;
 }
-/*
-.slide {
-  min-height: 70vh;
+
+.home .slide .content {
+  width: 60px;
 }
-*/
+
+.home .slide .content span {
+  font-size: 2rem;
+  color: red;
+}
 
 @media (max-width: 991px) {
   html {
