--- a/css/main.css
+++ b/css/main.css
@@ -107,25 +107,54 @@ section {
   background: #000;
 }
 
+/*
 .logo {
   font-weight: bolder;
   color: white;
   font-size: 3rem;
 }
+*/
 
+.header .logo {
+  font-weight: bolder;
+  color: #fff;
+  font-size: 3rem;
+}
+
+/*
 .logo span {
   color: green;
 }
+*/
 
+.header .logo span {
+  color: #f00;
+}
+
+/*
 .navbar a {
   display: inline-block;
   padding: 1.5rem 2rem;
   font-size: 1.7rem;
   color: white;
 }
+*/
 
+.header .navbar a {
+  display: inline-block;
+  padding: 1.5rem 2rem;
+  font-size: 1.7rem;
+  color: #fff;
+}
+
+/*
 .navbar a:hover {
   background: red;
+}
+*/
+
+.header .navbar a:hover {
+  background: #f00;
 }
 
 #menu-btn {
@@ -162,6 +191,7 @@ section {
 .home .slide .content h3 {
   font-size: 5rem;
   color: white;
+  padding: 1rem;
 }
 
 @media (max-width: 991px) {
