--- a/css/main.css
+++ b/css/main.css
@@ -55,8 +55,13 @@ section {
   position: absolute;
   top: 50%;
   left: 0;
-  -webkit-transform: translateY(-50%);
+
   transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+
   height: 0.1rem;
   width: 100%;
   background: #aaa;
@@ -84,8 +89,11 @@ section {
 }
 
 .btn:hover {
-  -webkit-transform: scale(1.1);
   transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
 }
 
 .header {
@@ -93,15 +101,19 @@ section {
   top: 0;
   left: 0;
   right: 0;
+
+  display: flex;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+
+  align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
+
+  justify-content: space-between;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+
   padding: 0 9%;
   z-index: 10000;
   background: #000;
