--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,18 @@ section {
 .home .slide .content h3 {
   font-size: 5rem;
   color: white;
-  padding: 1rem;
+  padding: 1rem 0;
+}
+
+.swiper-pagination-bullet {
+  height: 2rem;
+  width: 2rem;
+  background: white;
+  border-radius: 0;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: red;
 }
 
 @media (max-width: 991px) {
